--- a/css/style.css
+++ b/css/style.css
@@ -316,6 +316,11 @@ template {
   box-sizing: border-box;
 }
 
+*:focus {
+  outline: 10px;
+  outline-offset: 2px dotted red;
+}
+
 html {
   scroll-behavior: smooth;
   font-size: 62.5%;
@@ -368,13 +373,13 @@ body {
   padding-right: 5rem;
 }
 
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .container {
     padding-right: 3rem;
     padding-left: 3rem;
   }
 }
-@media only screen and (max-width: 375px) {
+@media screen and (max-width: 375px) {
   .container {
     padding-right: 1.6rem;
     padding-left: 1.6rem;
@@ -529,7 +534,7 @@ h3 {
   right: 420px;
 }
 
-@media only screen and (max-width: 1360px) {
+@media screen and (max-width: 1360px) {
   .hero__title {
     max-width: 445px;
     width: 100%;
@@ -537,7 +542,7 @@ h3 {
     letter-spacing: -2.05;
     margin-bottom: 6rem;
   }
-  .hero__poragrph {
+  .hero__text {
     margin-bottom: 3.4rem;
   }
   .hero__right__bg {
@@ -553,7 +558,7 @@ h3 {
     background-position: left -265px top 86px;
   }
 }
-@media only screen and (max-width: 630px) {
+@media screen and (max-width: 630px) {
   .hero-post {
     width: 100%;
     display: flex;
@@ -680,7 +685,7 @@ h3 {
   margin-bottom: 4.7rem;
 }
 
-@media only screen and (max-width: 988px) {
+@media screen and (max-width: 988px) {
   .footer {
     width: 100%;
   }
@@ -711,7 +716,7 @@ h3 {
     right: 0;
   }
 }
-@media only screen and (max-width: 610px) {
+@media screen and (max-width: 610px) {
   .footer {
     min-width: 445px;
   }
@@ -732,17 +737,17 @@ main {
   flex-grow: 1;
 }
 
-.skills {
+.info {
   background-image: url(../images/svg/oval-big-bg.svg);
   background-repeat: no-repeat;
   background-position: right -239px bottom;
 }
 
-.skills-container {
+.info-container {
   margin-bottom: 14rem;
 }
 
-.skills-gradient {
+.info-gradient {
   border: 0;
   background-color: #ffffff;
   width: 100%;
@@ -750,12 +755,12 @@ main {
   margin-bottom: 7.2rem;
 }
 
-.skills-list {
+.info-list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(345px, 1fr));
 }
 
-.skills-item {
+.info-item {
   margin-bottom: 5rem;
 }
 
@@ -868,7 +873,7 @@ main {
   background: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(../images/png/Bitmap-5.png);
 }
 
-@media only screen and (max-width: 1300px) {
+@media screen and (max-width: 1300px) {
   .projects-card-links {
     visibility: visible;
     opacity: 1;
@@ -878,13 +883,13 @@ main {
     opacity: 0;
   }
 }
-@media only screen and (max-width: 1210px) {
+@media screen and (max-width: 1210px) {
   li {
     margin-right: auto;
     margin-left: auto;
   }
 }
-@media only screen and (max-width: 1080px) {
+@media screen and (max-width: 1080px) {
   .skills {
     background-image: url(../images/svg/oval-big-bg.svg);
     background-repeat: no-repeat;
@@ -895,7 +900,7 @@ main {
     opacity: 0;
   }
 }
-@media only screen and (max-width: 630px) {
+@media screen and (max-width: 630px) {
   .skills-list {
     text-align: center;
   }
@@ -905,14 +910,15 @@ main {
     background-position: right -400px bottom;
   }
 }
-@media only screen and (max-width: 570px) {
+@media screen and (max-width: 570px) {
   .projects h1 {
     font-size: 4rem;
   }
   .projects-list {
     display: block;
   }
-  .projects-card-bg, .projects-card {
+  .projects-card-bg,
+  .projects-card {
     max-width: 570px;
     width: 100%;
   }
