--- a/scss/base/_resets.scss
+++ b/scss/base/_resets.scss
@@ -7,8 +7,8 @@
 }
 
 *:focus {
-  // outline: ;
-  // outline-offset: ;
+  outline: 10px;
+  outline-offset: 2px dotted red;
 }
 
 html {
@@ -62,14 +62,14 @@ body {
   padding-right: 5rem; // *
 }
 
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .container {
     padding-right: 3rem;
     padding-left: 3rem;
   }
 }
 
-@media only screen and (max-width: 375px) {
+@media screen and (max-width: 375px) {
   .container {
     padding-right: 1.6rem;
     padding-left: 1.6rem;
